# RAGattac

./: .gitignore  .python-version  README.md  code.py  horragor_final_data.parquet  horror.py  main.py  pgHector.py  pyproject.toml  supabase_db.py
api/: README.md  main.py  models.py  pyproject.toml
backend/: tool_wiki.py
cache_faiss/: movies_mapping.npy
data_referentiel/: livrable_scifirag_gold.parquet
frontend/: README.md  app.py  pyproject.toml
frontend/.streamlit/: config.toml
fusion_bdd/: horror.parquet  merge.py
