[project]
name = "ragattac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain-core>=1.4.0",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]


[project]
name = "ragattack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
