[project]
name = "horragore-ragattac"
version = "0.1.0"
description = "Pipeline ETL Horreur et moteur RAG unifié"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark>=3.5.0",
    "numpy>=2.0.0",
    "rapidfuzz>=3.9.0",
    "polars>=0.20.0",
    "selenium>=4.20.0",
    "webdriver-manager>=4.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "streamlit>=1.30.0",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.7",
    "faiss-cpu>=1.14.3",
    "beautifulsoup4>=4.15.0",
    "python-dotenv>=1.2.2",
    "wikipedia>=1.4.0",
]
